Fixed image not showing up problem. Check App.js line 23, 32,41,50.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,13 +4,15 @@
   box-sizing: border-box;
 }
 
-html, body, nav {
+html,
+body,
+nav {
   height: 100%;
 }
 
 body {
   font-family: "Encode Sans", sans-serif;
-  color: #2C0C69;
+  color: #2c0c69;
 }
 
 #menu {
@@ -28,9 +30,9 @@ h1 {
 
 header {
   padding: 2em;
-  background-color: #2C0C69;
+  background-color: #2c0c69;
   color: white;
-  border-bottom: 1px solid #2C0C69;
+  border-bottom: 1px solid #2c0c69;
 }
 
 p {
@@ -57,7 +59,7 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
-  background-color: #2C0C69;
+  background-color: #2c0c69;
   color: white;
   justify-content: center;
 }
@@ -82,7 +84,7 @@ nav li a {
 
 nav li:hover {
   background-color: white;
-  color: #2C0C69 ;
+  color: #2c0c69;
   font-weight: 700;
 }
 
@@ -119,17 +121,17 @@ main {
 }
 
 #card1 {
-  /*  background-image: url("..public/img/safe-campus.jpg"); */
+  background-image: url("../img/safe-campus.jpg");
   object-fit: contain;
 }
 
 #card2 {
-  /* background-image: url("..public/img/uw-police.jpg"); */
+  background-image: url("../img/uw-police.jpg");
   object-fit: contain;
 }
 
 #card3 {
-  /* background-image: url("..public/img/emergency-management.jpg"); */
+  background-image: url("../img/emergency-management.jpg");
   object-fit: contain;
 }
 
@@ -143,7 +145,7 @@ main {
   flex-grow: 0;
   flex-shrink: 0;
   padding: 2.5em;
-  border-top: 1px solid #2C0C69;
+  border-top: 1px solid #2c0c69;
 }
 
 #news ul {
@@ -170,7 +172,7 @@ h3 {
   padding-right: 2rem;
 }
 
-#formInput h2{
+#formInput h2 {
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -203,10 +205,12 @@ h3 {
   width: 300px;
   height: 30px;
   border-radius: 10px;
-  border: 1px solid #2C0C69;
+  border: 1px solid #2c0c69;
 }
 
-#stopList, #riderInfo, label {
+#stopList,
+#riderInfo,
+label {
   margin: 0px 2px;
   font-size: 13px;
 }
@@ -226,23 +230,25 @@ h3 {
   padding-top: 20px;
 }
 
-#escort-request h2{
+#escort-request h2 {
   padding-bottom: 10px;
 }
 
-#escort-request h3, h4 {
+#escort-request h3,
+h4 {
   padding-top: 13px;
   padding-bottom: 10px;
 }
 
-#escort-request li, p {
+#escort-request li,
+p {
   font-size: 14px;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
 #escort-request button {
-  background-color: #2C0C69;
+  background-color: #2c0c69;
   color: white;
   height: 40px;
   width: 200px;
@@ -267,11 +273,12 @@ h3 {
 }
 
 #night-card-text {
-  padding: 1em ;
+  padding: 1em;
 }
 
-#night-card-text h2, .notification-group {
-  padding-bottom: .5em;
+#night-card-text h2,
+.notification-group {
+  padding-bottom: 0.5em;
 }
 
 #night-card-text p {
@@ -283,7 +290,7 @@ button {
   background-color: #3d1c7a;
   color: white;
   border-style: none;
-  border-radius: .5em;
+  border-radius: 0.5em;
   font-size: medium;
   font-weight: bold;
 }
@@ -293,7 +300,8 @@ button:hover {
 }
 
 /* PROFILE PAGE */
-#notifications, #report {
+#notifications,
+#report {
   padding: 2em;
 }
 
@@ -301,7 +309,8 @@ button:hover {
   margin-bottom: 1em;
 }
 
-#notifications button, #report button {
+#notifications button,
+#report button {
   width: 200px;
   margin: 2em 0;
 }
@@ -320,11 +329,12 @@ label {
   padding-top: 20px;
 }
 
-#resources-links h2{
+#resources-links h2 {
   padding-bottom: 10px;
 }
 
-#resources-links li, p {
+#resources-links li,
+p {
   font-size: 14px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -347,7 +357,7 @@ label {
   width: 500px;
   height: 30px;
   border-radius: 10px;
-  border: 1px solid #2C0C69;
+  border: 1px solid #2c0c69;
 }
 
 /* MEDIA QUERIES */
@@ -370,15 +380,14 @@ label {
 
   header {
     background-color: white;
-    color: #2C0C69;
+    color: #2c0c69;
   }
-
 }
 
 @media (min-width: 992px) {
   nav ul li {
     font-size: 16px;
-    padding: 2em .5em;
+    padding: 2em 0.5em;
   }
 
   main {
@@ -391,7 +400,7 @@ label {
   }
 
   #news {
-    border-left: 1px solid #2C0C69;
+    border-left: 1px solid #2c0c69;
     border-top: 0;
     padding: 2em;
   }
